Many errors of the form JavaScript error: resource://gre/modules/SessionStoreFunctions.jsm, line 392: NS_ERROR_FILE_NOT_FOUND during |make mozmill| testing of Full Debug of C-C TB.
Categories
(Firefox :: Session Restore, defect)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox71 | --- | fixed |
People
(Reporter: ishikawa, Assigned: alchen)
Details
Attachments
(2 files)
Note that this report is actually the use of SessionStoreFunctions.jsm from within Thunderbird mail client. But since TB does not have Session related component and that the related bugs such as the following two are filed in Firefox, I chose Firefox as product, if this is not right, please change it.
Bug 1567057
NS_ERROR_FILE_NOT_FOUND in SessionStoreFunctions.jsm
Bug 1482682 Updated 2 months ago
[tracking] Sessionstore development related to session managers
Symptom:
Since the middle of July, I have seen the following errors during |make mozmill| testing of FULL DEBUG build of TB locally.
JavaScript error: resource://gre/modules/SessionStoreFunctions.jsm, line 392: NS_ERROR_FILE_NOT_FOUND:
The number of such error lines are rather high: 438 at the last count.
Where the error occurs does not seem to have a clear pattern. Initially, I thought it occurs for the first test in test directory, but this may not be the case. 432 is approximately 1/3 of the test cases in |make mozmill| test suite, but not exactly 1/3 either.
Also, there are tests that produce this error twice or even four times even.:
e.g.:
TEST-START | /NREF-COMM-CENTRAL/mozilla/comm/mail/test/mozmill/attachment/test-attachment-events.js | test_attachments_added_on_multiple
TEST-START | /NREF-COMM-CENTRAL/mozilla/comm/mail/test/mozmill/cloudfile/test-cloudfile-notifications.js | test_privacy_warning_notification_no_persist
TEST-START | /NREF-COMM-CENTRAL/mozilla/comm/mail/test/mozmill/cloudfile/test-cloudfile-notifications.js | test_privacy_warning_notification_open_after_close
TEST-START | /NREF-COMM-CENTRAL/mozilla/comm/mail/test/mozmill/cloudfile/test-cloudfile-attachment-urls.js | test_inserts_linebreak_on_empty_compose
TEST-START | /NREF-COMM-CENTRAL/mozilla/comm/mail/test/mozmill/cloudfile/test-cloudfile-attachment-urls.js | test_inserts_linebreak_on_empty_compose_with_signature
and several other cloudl test.
The following test produces four such error messages.
TEST-START | /NREF-COMM-CENTRAL/mozilla/comm/mail/test/mozmill/cloudfile/test-cloudfile-attachment-urls.js | test_adding_filelinks_to_empty_reply_above
From the local log, I am attaching the output of
egrep "(^TEST-|SessionStoreFunctions)" log1061-mozmill.txt
to show where the error occurs relative to various tests.
| Assignee | ||
Updated•6 years ago
|
| Assignee | ||
Comment 1•6 years ago
|
||
People will meet this error due to there is no SessionStore.jsm in Thunderbird.
Since Thunderbird doesn't need this functionality, we could eliminate the error by the similar approach as bug 1567057.
Thanks Chiaki, this is annoying.
There is a session store in Tb, here:
https://searchfox.org/comm-central/source/mail/base/modules/SessionStoreManager.jsm
Would it be better to adapt Tb (if so, how) or ifdef it away?
| Assignee | ||
Comment 3•6 years ago
|
||
(In reply to alta88 from comment #2)
There is a session store in Tb, here:
https://searchfox.org/comm-central/source/mail/base/modules/SessionStoreManager.jsmWould it be better to adapt Tb (if so, how) or ifdef it away?
I think the SessionStoreManager.jsm Tb has is different from the SessionStore.jsm.
You should "ifdef it away" to eliminate the error.
In that case, perhaps you can do it as originally suggested and since it's in upstream code, thanks.
| Reporter | ||
Comment 5•6 years ago
•
|
||
(In reply to alta88 from comment #4)
In that case, perhaps you can do it as originally suggested and since it's in upstream code, thanks.
Thank you for your comment.
"you can do it": Are you referring to me as the one who "ifdef it away"? :-)
I am not entirely sure how to do that: Well actually I noticed the #if !defined. construct in bug 1567057.
So we simply modify the #if expression to make it true (non-zero) in the case of TB (?).
If, so, what would be the proper compile-time macro name to use for TB?
TIA
No, I meant alchen, who has already done something similar in bug bug 1567057 and could perhaps kindly do so here.
| Reporter | ||
Comment 7•6 years ago
|
||
OK. Yes, I think he can simply expand the #if expression to take care of the issue once he knows what the macro name would be.
| Assignee | ||
Comment 8•6 years ago
|
||
Don't need TabListener on Thunderbird
| Assignee | ||
Comment 9•6 years ago
|
||
Comment 10•6 years ago
|
||
Pushed by nbeleuzu@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/b4653a0b413e
TabListener is only for contentSessionStore on FF desktop r=peterv
Comment 11•6 years ago
|
||
| bugherder | ||
| Reporter | ||
Comment 12•6 years ago
|
||
Thank you !
Description
•