Bug 1578296 - TabListener is only for contentSessionStore on FF desktop r=peterv

Don't need TabListener on Thunderbird

Differential Revision: https://phabricator.services.mozilla.com/D44995